@@ -6,6 +6,7 @@ kde4libs (4:4.9.5-0r0) UNRELEASED; urgency=low
   * Update patches:
     - drop fix-copying-of-files-with-extended-ACLs.patch, applied upstream.
     - drop python3-support-bytecode.patch, applied upstream.
+    - update make_libkdeinit4_private.diff.
     - refresh other patches to make them apply without any offset.
   * Bump libsoprano-dev build dependency to >= 2.7.56.
   * Add aspell to build dependencies, this is a workaround for a possible bug in
